--- a/worker/package.json
+++ b/worker/package.json
@@ -1,10 +1,11 @@
 {
     "dependencies": {
-        "nodemon": "*",
-        "redis": "2.8.0"
+      "nodemon": "1.18.3",
+      "redis": "2.8.0"
     },
-    "script": {
-        "dev": "nodemon",
-        "start" : "node index.js"
+    "scripts": {
+      "start": "node index.js",
+      "dev": "nodemon"
     }
-}
+  }
+  
