--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,17 @@ services:
         - PGDATABASE=postgres
         - PGPASSWORD=postgress_password
         - PGPORT=5332
+    client:
+      build:
+        dockerfile: Dockerfile.dev
+        context: ./client
+      volumes:
+        - /app/node_modules
+        - /client:/app
+    worker:
+      build:
+        dockerfile: Dockerfile.dev
+        context: ./worker
+      volumes: 
+        - /app/node_modules
+        - ./worker:/app
